# Xml-pipeline

./: .gitignore  DELIVERY_SUMMARY.md  LICENSE  README.md  RELEASE_SETUP.md  WORK_COMPLETED.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: 001-why-xml-not-json.md  002-never-touch-xml-pydantic-first.md  003-message-hygene-immune-system.md  README.md
tests/: test_pipeline.py
xml-pipeline/: bus.py
xml_pipeline/: __init__.py  bus.py  pipeline.py
